@@ -1,3 +1,11 @@
+2005-08-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (discover):
+	Replaced $Torrus::DevDiscover::listAdminDownInterfaces
+	with parameter RFC2863_IF_MIB::list-admindown-interfaces
+	and $Torrus::DevDiscover::listNotPresentInterfaces
+	with RFC2863_IF_MIB::list-notpresent-interfaces
+
 2005-08-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* doc/extstorage.pod.in: Started documenting the External storage
